Navbar getting covered bug resolved

--- a/src/components/CSS/navbar.css
+++ b/src/components/CSS/navbar.css
@@ -9,6 +9,7 @@
   width: 100%;
   box-sizing: border-box;
   position: fixed;
+  z-index:1000;
 }
 
 .navbar-logo-link {
